fixed text alignment issue breaking layout

--- a/ipfs.io-theme/_styl/components/footer.styl
+++ b/ipfs.io-theme/_styl/components/footer.styl
@@ -39,7 +39,8 @@ ul.sitemap
     display: inline-block
     background: transparent no-repeat
     background-size: contain
-    text-indent: 9999em
+    text-align: left
+    text-indent: -9999em
 
     &.Twitter
       background-image: url(/theme/images/icon-social-twitter.svg)
